# hiwr_camera_controller

./: .gitignore.swp  CMakeLists.txt  README.md  hiwr_camera_controller.xml  package.xml  uvc_cam_nodelet.xml
cfg/: UVCCam.cfg
cfg/cpp/hiwr_camera_controller/: UVCCamConfig.h
cfg/cpp/hyve_camera_common/: UVCCamConfig.h
include/: hiwr_camera_controller.h  uvc_cam_node.h
launch/: camera.launch  debug.launch
param/: config_Logitech_C920.yaml  config_Microsoft_Lifecam_Cinema.yaml  config_default.yaml
src/: display_node.cpp  hiwr_camera_controller.cpp  selectCam.c  uvc_cam.cpp  uvc_cam_node.cpp
src/hiwr_camera_controller/cfg/: UVCCamConfig.py
